--- a/commerce/package.json
+++ b/commerce/package.json
@@ -9,9 +9,13 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-currency-icons": "^1.0.3",
     "react-dom": "^18.2.0",
+    "react-filter-search": "^1.1.11",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "semantic-ui-react": "^2.1.4",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
