--- a/commerce/package.json
+++ b/commerce/package.json
@@ -19,7 +19,7 @@
     "react-filter-search": "^1.1.11",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-use-cart": "^1.13.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
